--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,6 +18,8 @@
         <link rel="stylesheet" href="assets/styles/main.css">
         <link rel="stylesheet" href="assets/styles/vita.css">
         <link rel="stylesheet" href="assets/styles/theme_oliva.css">
+
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <!-- endbuild -->
     </head>
     <body ng-app="transandalus">
